--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>calculadora</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <main class="main">
         <div class="are_calc">
-            <h1>bhaskara</h1>
+            <h1>Calculadora</h1>
             <section class="valores">
-                insia valor A:
+                valor A:
                 <Input type="number" id="valorA">
                 <br>
-                insira valor B:
+                valor B:
                 <input type="number" id="valorB">
                 <br>
-                insira valor c:
+                valor c:
                 <input type="number" id="valorC">
             </section>
             <section class="botao" id="btnCalcular">
