--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculadora</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
+    <link rel=" icon " href="calculator_14445.ico"
 </head>
 
 <body>
-    <main class="main">
+    <main class="main">'-'
         <div class="are_calc">
             <h1>Calculadora</h1>
             <section class="valores">
@@ -20,7 +21,7 @@
                 valor B:
                 <input type="number" id="valorB">
                 <br>
-                valor c:
+                valor C:
                 <input type="number" id="valorC">
             </section>
             <section class="botao" id="btnCalcular">
@@ -39,6 +40,9 @@
 
             </div>
         </div>
+        <a href="https://www.youtube.com/watch?v=HkN2uQbzuqY">  
+        <h6>NAO CLIQUE AQUI</h6>
+        </a>
     </main>
     <script src="java.js"></script>
 </body>
